...
  String errorMessage='';

  @override
  Widget build(BuildContext context) {
    return Scaffold(
      extendBodyBehindAppBar: true,
      appBar: CustomAppBar(title: "EpicDiceEvents"),
      body: Stack(
        children: [
          Container(
            decoration: BoxDecoration(
              image: DecorationImage(
                image: AssetImage('images/bg.jpg'),
...
          Center(
            child: SingleChildScrollView(
              child: Column(
                mainAxisAlignment: MainAxisAlignment.center,
                children: [
                  SizedBox(height: 80,),
                  basicTextField(Key('nume utilizator'), _usernameController, ' Nume Utilizator'),
                  SizedBox(height: 20,),
                  basicTextField(Key('email'), _emailController, ' Email'),
                  SizedBox(height: 20,),
                  basicTextField(Key('parola'), _passwordController, ' Parola'),
                  SizedBox(height: 20,),
                  basicTextField(Key('parola repetata'), _repeatPasswordController, ' Repeta Parola'),
                  SizedBox(height: 20,),
                  basicTextField( Key('localitate'), _cityController, ' Localitate'),
                  SizedBox(height: 40),
                  ElevatedButton(
                    key: Key("SignUpButton"),
                    onPressed: () async {
                      _handleSingUpIntoApp();
                    },
                    style: ElevatedButton.styleFrom(
                      shape: RoundedRectangleBorder(
                        borderRadius: BorderRadius.circular(12.5),
...
                    ),
                    child: Container(
                      width: 130.0,
                      height: 50.0,
                      alignment: Alignment.center,
                      child: Text(
                        'Înregistrare',
                        style: TextStyle(
                          fontWeight: FontWeight.bold,
                          fontSize: 20.0,
                          color: Colors.black,
                        ),
                      ),
...
