...
              child: Column(
                mainAxisAlignment: MainAxisAlignment.center,
                children: [
                  SizedBox(
                    height: 80,
                  ),
                  basicTextField(Key('EmailField'), _emailController, ' Email'),
                  SizedBox(height: 20,),
                  basicTextField(Key('ParolaField'), _passwordController, ' Parola'),
                  SizedBox(height: 50),
                  ElevatedButton(
                    onPressed: () async {
                      await _handleLogInIntoApp(_emailController, _passwordController);
                    },
                    style: ElevatedButton.styleFrom(
...
                    ),
                    child: Container(
                      width: 120.0,
                      height: 50.0,
                      alignment: Alignment.center,
                      child: Text(
                        'Conectare',
                        style: TextStyle(
                          fontWeight: FontWeight.bold,
                          fontSize: 20.0,
                          color: Colors.black,
                        ),
                      ),
...
                          errorMessage,
                          style: customShadowTextStyle(),
                        ),
                      )
                  ),
                  SizedBox(height: 50),
                  CustomGoToElevatedButton(key:Key("ResetPasswordButton"),title: 'Resetare Parola', widthSize: 180, heightSize: 40, fontSize: 18.0, targetPage: ResetPasswordPage()),
                ],
              ),
            ),
          ),
        ],
      ),
...
    String email = emailController.text;
    String password = passwordController.text;

    User? result = await _auth.logIn(email,password);

    if(result == null){
      setState(() => errorMessage = 'Email sau Parola Incorecte' );
      _auth.signOut();
    }
    else{
      if (!result.emailVerified) {
        setState(() => errorMessage = 'Email de validare retrimis');
        await result.sendEmailVerification();
...
