...
    },
  );
  return;
}

void showIncorectLenghtError(BuildContext context){
  showSimpleError(context,'Format Incorect', 'Numele si Parola trebuie sa aibă minim 5 caractere');
}
void showIncorectPasswordRetyped(BuildContext context){
  showSimpleError(context, 'Parola nu se potriveste', 'Parolele introduse sunt diferite');
}
void showIncorectEmailError(BuildContext context){
  showSimpleError(context, 'Email invalid', 'Adresa de email introdusă nu este validă');
}
void showAlreadyRegistatedforEvent(BuildContext context){
  showSimpleError(context,'Participant', 'Deja te-ai înscris pentru acest Eveniment');
}
void showAlreadyUnRegistatedforEvent(BuildContext context){
  showSimpleError(context,'Retras', 'Deja te-ai retras din acest Eveniment');
}
void showIncompleteDataError(BuildContext context){
  showSimpleError(context, 'Date Incomplete', 'Nu ai completat toate câmpurile necesare');
}
void showSelectedDateError(BuildContext context){
  showSimpleError(context,'Nepotrivire Date' ,'Data de început nu poate fi mai mare decât data de final');
...
