...
              mainAxisAlignment: MainAxisAlignment.center,
              children: [
                SizedBox(
                  height: 20,
                ),
                TextField(
                  key: Key("EmailForPasswordReset"),
                  controller: emailController,
                  decoration: InputDecoration(
                    hintText: "Introduceti email"
                  ),
                ),
                SizedBox(
...
                ),
                ElevatedButton(
                    onPressed: (){
                      sendEmailForResetPassword(emailController.text);
                    },
                    child: Text(
                      "Trimite",
                      style: TextStyle(
                        fontWeight: FontWeight.bold,
                        fontSize: 28.0,
                        color: Colors.black,
                      ),
                    ),
...
          MaterialPageRoute(builder: (context) => Authenticate()),
              (Route<dynamic> route) => false,
        );
        ScaffoldMessenger.of(context).showSnackBar(
            SnackBar(
              content: Text(
                'Un email a fost trimis la adresa introdusă',
                style: customSnackBoxTextStyle(20, Colors.white),
              ),
              backgroundColor: Colors.orangeAccent,
            )
        );
      }
...
          MaterialPageRoute(builder: (context) => Authenticate()),
              (Route<dynamic> route) => false,
        );
        ScaffoldMessenger.of(context).showSnackBar(
            SnackBar(
              content: Text(
                'Email-ul introdus nu este valid',
                style: customSnackBoxTextStyle(20, Colors.white),
              ),
              backgroundColor: Colors.orangeAccent,
            )
        );
      }
...
